[gd_scene load_steps=10 format=2]

[ext_resource path="res://Entities/char_num.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/custom_label.gd" type="Script" id=2]
[ext_resource path="res://Scripts/PB_char.gd" type="Script" id=3]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Fonts/Silver.ttf"

[sub_resource type="DynamicFont" id=2]
size = 35
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://Fonts/Silver.ttf"

[sub_resource type="DynamicFont" id=4]
size = 30
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 3 )

[sub_resource type="DynamicFontData" id=5]
font_path = "res://Fonts/Silver.ttf"

[sub_resource type="DynamicFont" id=6]
size = 30
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 5 )

[node name="PB_char" type="VBoxContainer"]
margin_right = 100.0
margin_bottom = 188.0
size_flags_horizontal = 6
size_flags_vertical = 6
script = ExtResource( 3 )
_char_name = NodePath("name_control/Char_name")
_char_num = NodePath("char_num")
_dec = NodePath("buttons/dec")
_inc = NodePath("buttons/inc")

[node name="name_control" type="Control" parent="."]
margin_right = 100.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )

[node name="Char_name" type="Label" parent="name_control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -137.5
margin_top = -20.0
margin_right = 137.5
margin_bottom = 20.0
custom_fonts/font = SubResource( 2 )
text = "Сила"
align = 1
valign = 1
uppercase = true
script = ExtResource( 2 )
font_size = 35
font_outline_size = 2

[node name="char_num" parent="." instance=ExtResource( 1 )]
margin_top = 44.0
margin_bottom = 144.0

[node name="buttons" type="HBoxContainer" parent="."]
margin_top = 148.0
margin_right = 100.0
margin_bottom = 188.0
rect_min_size = Vector2( 0, 40 )

[node name="dec" type="Button" parent="buttons"]
margin_right = 48.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="txt" type="Label" parent="buttons/dec"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 6.0
custom_fonts/font = SubResource( 4 )
text = "+3"
align = 1
valign = 1
uppercase = true
script = ExtResource( 2 )
font_size = 30
font_outline_size = 2

[node name="inc" type="Button" parent="buttons"]
margin_left = 52.0
margin_right = 100.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="txt" type="Label" parent="buttons/inc"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 6.0
custom_fonts/font = SubResource( 6 )
text = "+3"
align = 1
valign = 1
uppercase = true
script = ExtResource( 2 )
font_size = 30
font_outline_size = 2

[connection signal="pressed" from="buttons/dec" to="." method="_on_dec_pressed"]
[connection signal="pressed" from="buttons/inc" to="." method="_on_inc_pressed"]
